--- a/task1.ipynb
+++ b/task1.ipynb
@@ -343,165 +343,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      0    1    2    3    4    5    6    7    8    9   ...   246  247  248  \\\n",
-      "0     0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   1.0  0.0  0.0   \n",
-      "1     0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "2     0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0 ...   1.0  0.0  0.0   \n",
-      "3     0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "4     0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0 ...   0.0  0.0  0.0   \n",
-      "5     0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "6     0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "7     0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  0.0  0.0   \n",
-      "8     0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "9     0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "10    0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "11    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0 ...   1.0  1.0  0.0   \n",
-      "12    0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  0.0 ...   1.0  1.0  1.0   \n",
-      "13    0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "14    0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  0.0   \n",
-      "15    0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "16    0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "17    0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "18    0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "19    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "20    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
-      "21    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   1.0  1.0  1.0   \n",
-      "22    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "23    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
-      "24    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   1.0  1.0  0.0   \n",
-      "25    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
-      "26    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
-      "27    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0 ...   0.0  0.0  1.0   \n",
-      "28    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
-      "29    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
-      "...   ...  ...  ...  ...  ...  ...  ...  ...  ...  ... ...   ...  ...  ...   \n",
-      "1563  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1564  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0 ...   0.0  0.0  0.0   \n",
-      "1565  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1566  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1567  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  0.0  0.0   \n",
-      "1568  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1569  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  0.0  0.0   \n",
-      "1570  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1571  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1572  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  1.0   \n",
-      "1573  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1574  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1575  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1576  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1577  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1578  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  0.0  0.0   \n",
-      "1579  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1580  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  0.0   \n",
-      "1581  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  1.0  1.0   \n",
-      "1582  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1583  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1584  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1585  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1586  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0 ...   0.0  0.0  1.0   \n",
-      "1587  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1588  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1589  0.0  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   1.0  1.0  1.0   \n",
-      "1590  0.0  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1591  0.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0  1.0 ...   0.0  0.0  0.0   \n",
-      "1592  0.0  0.0  0.0  0.0  0.0  0.0  1.0  1.0  1.0  1.0 ...   1.0  0.0  0.0   \n",
-      "\n",
-      "      249  250  251  252  253  254  255  \n",
-      "0     0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1     1.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "2     0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "3     0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "4     0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "5     1.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "6     1.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "7     0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "8     0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "9     0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "10    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "11    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "12    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "13    1.0  1.0  1.0  0.0  0.0  0.0  0.0  \n",
-      "14    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "15    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "16    1.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "17    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "18    1.0  1.0  1.0  0.0  0.0  0.0  0.0  \n",
-      "19    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "20    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "21    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "22    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "23    0.0  0.0  0.0  0.0  1.0  1.0  1.0  \n",
-      "24    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "25    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "26    1.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "27    0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "28    0.0  0.0  0.0  1.0  1.0  0.0  0.0  \n",
-      "29    0.0  0.0  0.0  1.0  1.0  1.0  0.0  \n",
-      "...   ...  ...  ...  ...  ...  ...  ...  \n",
-      "1563  0.0  0.0  0.0  1.0  1.0  0.0  0.0  \n",
-      "1564  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1565  1.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1566  1.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1567  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1568  0.0  0.0  0.0  0.0  0.0  1.0  1.0  \n",
-      "1569  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1570  1.0  1.0  1.0  1.0  0.0  0.0  0.0  \n",
-      "1571  0.0  1.0  1.0  1.0  0.0  0.0  0.0  \n",
-      "1572  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1573  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1574  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1575  1.0  1.0  1.0  1.0  0.0  0.0  0.0  \n",
-      "1576  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1577  0.0  0.0  0.0  1.0  1.0  1.0  0.0  \n",
-      "1578  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1579  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1580  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1581  1.0  1.0  1.0  0.0  0.0  0.0  0.0  \n",
-      "1582  1.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1583  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1584  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1585  1.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1586  1.0  1.0  1.0  1.0  1.0  0.0  0.0  \n",
-      "1587  1.0  1.0  1.0  0.0  0.0  0.0  0.0  \n",
-      "1588  0.0  0.0  0.0  0.0  1.0  1.0  0.0  \n",
-      "1589  1.0  1.0  1.0  1.0  0.0  0.0  0.0  \n",
-      "1590  1.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1591  1.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1592  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "\n",
-      "[1593 rows x 256 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "handwritten_digits = data.loc[:, 0 : 255]\n",
-    "print(handwritten-digits)"
+    "result_digits = data.loc[:, 256 : 266].apply(lambda row: row.idxmax() % 256, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Int64Index([256, 257, 258, 259, 260, 261, 262, 263, 264, 265], dtype='int64')\n"
+      "[2]\n"
      ]
     }
    ],
    "source": [
-    "result_digits = data.loc[:, 256 : 266]apply(lambda row: row.idxmax() % 256, axis=1)\n",
-    "digits.rename(columns={256: 1})\n",
-    "print(digits)"
+    "i = np.random.randint(0, len(handwritten_digits), 1)\n",
+    "print(result_digits.loc[i].values)\n",
+    "plt.imshow(handwritten_digits.loc[i].values.reshape((16,16)), cmap = \"Set1\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -509,7 +376,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X, X_test, Y, Y_test = train_test_split(handwritten_digits, result_digits, test_size=0.3, random_state=11)"
+   ]
   }
  ],
  "metadata": {
