--- a/task1.ipynb
+++ b/task1.ipynb
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2]\n"
+      "[5]\n"
      ]
     }
    ],
@@ -59,30 +59,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 84,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 3 0 9 6 0 1 2 4 9 1 5 6 8 7 3 3 3 3 6 8 3 1 3 5 9 2 7 5 1 8 8 2 2 2\n",
-      " 8 2 7 3 4 2 0 0 2 3 5 8 2 6 2 6 2 7 0 6 2 9 0 1 8 1 8 0 5 6 4 4 9 3 1 9 1\n",
-      " 9 0 2 4 1 1 8 8 3 9 4 7 1 6 1 7 5 4 4 3 4 5 8 4 0 4 5 0 0 2 7 0 7 2 6 8 1\n",
-      " 6 4 2 4 9 1 3 6 1 3 1 5 3 8 1 8 1 0 3 3 8 2 9 7 2 6 5 5 1 6 3 4 0 0 7 6 2\n",
-      " 2 8 6 1 7 3 3 9 9 6 6 5 5 3 8 4 8 9 0 8 5 3 1 0 5 7 5 9 3 0 6 3 6 0 1 1 3\n",
-      " 1 6 3 2 0 6 2 4 4 4 2 6 3 0 4 0 7 6 3 8 0 3 9 5 1 5 5 7 5 6 5 6 2 1 9 7 1\n",
-      " 8 2 6 4 9 5 1 3 3 6 9 3 1 7 2 8 1 1 8 0 5 3 1 5 4 2 7 4 5 1 2 7 3 2 0 2 4\n",
-      " 3 2 3 9 5 0 3 8 0 5 4 2 0 4 2 4 4 9 1 7 3 1 6 5 3 6 9 2 7 5 3 9 3 2 2 6 1\n",
-      " 3 5 9 6 0 3 9 9 7 7 5 7 6 5 7 1 8 7 2 4 2 6 8 1 5 1 3 2 7 8 7 0 8 2 9 0 8\n",
-      " 5 9 7 9 5 7 5 9 3 8 5 9 6 5 1 3 7 2 8 1 1 5 8 4 8 7 5 7 6 6 7 2 2 6 4 7 4\n",
-      " 4 9 3 6 1 4 5 1 2 5 2 7 8 0 2 8 3 1 9 2 4 2 4 0 9 6 3 0 0 3 8 6 4 0 8 4 3\n",
-      " 3 7 5 4 3 3 0 5 1 2 6 9 9 2 4 7 1 0 3 9 0 2 6 4 6 7 4 9 2 4 7 6 0 0 9 7 2\n",
-      " 0 5 8 0 5 5 3 3 8 5 4 4 1 2 1 2 9 1 1 5 2 4 4 1 0 6 3 2 2 3 2 0 8 8]\n"
-     ]
-    }
-   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "hw_train, hw_test, res_train, res_test = train_test_split(handwritten_digits, result_digits, \\\n",
     "                                                          test_size=0.3, random_state=53)\n",
@@ -93,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +87,7 @@
        "0.899581589958159"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -165,18 +150,18 @@
        "           metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
        "           weights='uniform'),\n",
        "       fit_params=None, iid='warn', n_jobs=None,\n",
-       "       param_grid={'n_neighbors': range(7, 56, 7), 'weights': ['uniform', 'distance'], 'metric': ['euclidean', 'rogerstanimoto', 'russellrao']},\n",
+       "       param_grid={'n_neighbors': range(6, 9), 'weights': ['uniform', 'distance'], 'metric': ['euclidean', 'rogerstanimoto', 'russellrao']},\n",
        "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
        "       scoring='accuracy', verbose=0)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "knn_params = {'n_neighbors': range(7, 56, 7), \n",
+    "knn_params = {'n_neighbors': range(6, 9), \n",
     "              'weights': [\"uniform\", \"distance\"], \n",
     "              'metric': ['euclidean', \"rogerstanimoto\", \"russellrao\"]}\n",
     "knn_grid = GridSearchCV(knn_cl, knn_params, cv=10, scoring='accuracy')\n",
@@ -185,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +179,7 @@
        "{'metric': 'rogerstanimoto', 'n_neighbors': 7, 'weights': 'distance'}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +199,7 @@
        "0.9013452914798207"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +221,7 @@
        "           weights='distance')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -269,13 +254,46 @@
        "0.9100418410041841"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "metrics.accuracy_score(res_test, res_test_best)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.98      0.96        42\n",
+      "           1       0.74      1.00      0.85        39\n",
+      "           2       0.92      0.96      0.94        56\n",
+      "           3       0.84      0.96      0.90        51\n",
+      "           4       1.00      0.88      0.94        50\n",
+      "           5       0.90      0.94      0.92        47\n",
+      "           6       0.96      0.96      0.96        45\n",
+      "           7       0.95      0.89      0.92        44\n",
+      "           8       0.95      0.79      0.87        53\n",
+      "           9       0.95      0.78      0.86        51\n",
+      "\n",
+      "   micro avg       0.91      0.91      0.91       478\n",
+      "   macro avg       0.92      0.91      0.91       478\n",
+      "weighted avg       0.92      0.91      0.91       478\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(metrics.classification_report(res_test, res_test_best))"
    ]
   },
   {
