--- a/HW/3/task3.ipynb
+++ b/HW/3/task3.ipynb
@@ -1185,18 +1185,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_hot_encoder = OneHotEncoder(sparse=False, categorical_features=range(10))\n",
-    "X_ohe = one_hot_encoder.fit_transform(X)\n",
+    "one_hot_encoder = OneHotEncoder(sparse=False, categories='auto')\n",
+    "X_ohe = one_hot_encoder.fit_transform(X[['season', 'holiday', 'workingday', 'weather', 'month', 'day','hour']])\n",
     "X_ohe_train, X_ohe_test, Y_ohe_train, Y_ohe_test = train_test_split(X_ohe, Y, test_size=0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
        "SGDRegressor(alpha=0.0001, average=False, early_stopping=False, epsilon=0.1,\n       eta0=0.01, fit_intercept=True, l1_ratio=0.15,\n       learning_rate='invscaling', loss='squared_loss', max_iter=None,\n       n_iter=None, n_iter_no_change=5, penalty='l2', power_t=0.25,\n       random_state=None, shuffle=True, tol=0.001, validation_fraction=0.1,\n       verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,16 +1229,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "50231254295526.33"
+       "15254121.494752537"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,16 +1249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8671df1320>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f86707a02e8>"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1279,19 +1279,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OHE = OneHotEncoder(sparse=False, categorical_features=range(10))\n",
-    "OHE = OHE.fit_transform(X_data.drop(['month', 'atemp'], axis=1))\n",
+    "OHE = OneHotEncoder(sparse=False)\n",
+    "OHE = OHE.fit_transform(X_data.drop(['month', 'atemp'], axis=1)[['season', 'holiday', 'workingday', 'weather', 'day','hour']])\n",
     "\n",
     "X_train_OHE, X_test_OHE, Y_train, Y_test = train_test_split(OHE, Y_data, test_size=0.3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,16 +1303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "47477102423.506294"
+       "1121815.0397752356"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,6 +1322,13 @@
     "ohe_categ_regr.fit(X_train_ohe_scaled, Y_train)\n",
     "mean_squared_error(Y_test, ohe_categ_regr.predict(X_test_ohe_scaled))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
