--- a/HW/4/task4.ipynb
+++ b/HW/4/task4.ipynb
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "data_file = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/forest-fires/forestfires.csv\")\n",
+    "data_file = pd.read_csv(\"/home/elavelina/Documents/DSML_2018-master/HW/4/forestfires.csv\")\n",
     "data_file.head()"
    ]
   },
